# FIXME: meet the build prereq + orig.tgz (dist + ln -sf)!
package:
	emerge nut-2.2.2.ebuild

# Please keep this file sorted, with one file entry per line. This makes it
# easier to track changes.
EXTRA_DIST = \
	changelog \
	lighttpd_nut.conf-2.2.0 \
	Makefile.am \
	nut-2.2.2.ebuild \
	nut-2.2.2-init.d-upsdrv \
	nut-2.2.2-init.d-upsmon \
	nut-2.2.2-init.d-upsd \
	nut-2.2.2-no-libdummy.patch
